--- a/DevSecOps/Jenkins/Jenkins-automation/Dockerfile
+++ b/DevSecOps/Jenkins/Jenkins-automation/Dockerfile
@@ -1,29 +1,37 @@
 #This is the base image we use to create our image from
-
+ 
+#FROM jenkins:latest
 FROM jenkinsci/jenkins
-
+ 
 #just info about who created this
-
+ 
 USER root
 MAINTAINER Tapan
-
+ 
 #get rid of admin password setup
-
+ 
 ENV JAVA_OPTS="-Djenkins.install.runSetupWizard=false"
+ 
+RUN apt-get update \
+      && apt-get upgrade -y \
+      && apt-get install -y sudo libltdl-dev \
+      && rm -rf /var/lib/apt/lists/*
+ 
 
 #automatically installing all plugins
-
+ 
 COPY plugins.txt /usr/share/jenkins/ref/plugins.txt
 COPY scripts/* /usr/share/jenkins/ref/scripts/
-
+ 
 #RUN curl https://public.dhe.ibm.com/software/products/UrbanCode/plugins/ibmucd/jenkins-pipeline-ud-plugin/ibm-ucdeploy-build-steps-2.9.993392.hpi -o ucd-build-step.hpi
 RUN wget https://public.dhe.ibm.com/software/products/UrbanCode/plugins/ibmucd/jenkins-pipeline-ud-plugin/ibm-ucdeploy-build-steps-2.9.993392.hpi
-
+ 
 RUN /usr/local/bin/install-plugins.sh < /usr/share/jenkins/ref/plugins.txt
-
+ 
 #adding scripts
-
+ 
 COPY init.groovy.d/* /usr/share/jenkins/ref/init.groovy.d/
 Copy scripts/* /var/jenkins_home/plugins/
 COPY conf/* /var/jenkins_home/
 COPY downloads/* /var/jenkins_home/
+ 
